<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="#fff"
    tools:context="com.example.danmat.projectcontacts.MainActivity">

    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/form_textInput_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/formField"
                android:inputType="textPersonName"
                android:hint="@string/form_fullName"/>

        </android.support.design.widget.TextInputLayout>
<!--
        <DatePicker
            android:id="@+id/form_datePicker_birthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/form_textInput_birthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/form_input_birthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:theme="@style/formField"
                android:inputType="text|date"
                android:hint="@string/form_birthDate"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/form_textInput_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/formField"
                android:inputType="text|phone"
                android:hint="@string/form_phone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/form_textInput_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/formField"
                android:inputType="textEmailAddress"
                android:hint="@string/form_email"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/form_textInput_contactDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/formField"
                android:inputType="textLongMessage"
                android:hint="@string/form_contactDesc"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formLayout"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button_saveForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/form_button_next"
            android:theme="@style/mainButton"/>
    </RelativeLayout>
</RelativeLayout>
